app/CourseSelect/CourseSelect.css
body {
  margin: 1rem 0.5rem;
}


fieldset {
  border: none;
}

legend {
  font: 400 1rem "Open Sans", Helvetica, sans-serif;
  margin-bottom: 0.5rem;
  text-align: center;
}

.course-select {
  width: 100%;
  margin-top: -1rem;
  list-style: none;
  padding-left: 0;
}

.department {
  margin-top: 1rem;
}

.department-heading {
  font: 400 1rem "Open Sans", Helvetica, sans-serif;
  color: #0f5479;
  cursor: pointer;
  margin-bottom: 0.5rem;
  margin-left: 2rem;
}

.department-heading:after {
  content: "▲";
  position: absolute;
  right: 3.25rem;
}

.expand-indicator {
  font: 400 1rem "Open Sans", Helvetica, sans-serif;
}

.department-heading:hover {
  color: #988556;
  transition: color 0.1s ease;
}

.department-courses {
  /* display: none; */

  padding-left: 0;
  color: #000;
  list-style: none;
}

.course-item {
}

.course-item:last-of-type {
  border-bottom: unset;
}

.course {
  padding: 0.25rem 0;
  display: flex;
  align-items: center;
}

input[type="checkbox"] {
  width: 2rem;
  margin: 0;
  /* margin-right: 1rem; */
}

/* .department-courses > li:hover {
  background-color: #988556;
  color: #FFF;
  transition: background-color 0.2s linear;
} */

label {
  cursor: pointer;
}

.course-title {
  font: 300 1rem "Open Sans", Helvetica, sans-serif;
  flex-basis: 16rem;
  flex-grow: 1;
}

.course-id {
  font: 300 0.75rem "Open Sans", Helvetica, sans-serif;
  flex-basis: 3rem;
  flex-grow: 0;
  margin-left: 0.5rem;
}

.course-department {
  display: none;
}

@media (min-width: 490px) {
  .course-department {
    display: initial;
  }

  .course-id {
    flex-basis: 5rem;
  }
}

